# xfce4-applet-mail

./: .gitignore  configure.ac.in
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
libmailwatch-core/: Makefile.am  mailwatch-mailbox-gmail.c  mailwatch-mailbox-imap.c  mailwatch-mailbox-pop3.c  mailwatch-utils.c  mailwatch-utils.h  mailwatch.c
panel-plugin/: Makefile.am  applet-mail.desktop.in  mailwatch-plugin.c
